# JSTemplates

./: .gitignore  Makefile  compose.yaml  init.sql  package-lock.json  package.json  pnpm-lock.yaml
DocumentGenerationAPI/: DocumentGenerationAPI.csproj  DocumentGenerationAPI.sln  Program.cs  TemplateGenerationAPI.csproj  WeatherForecast.cs
DocumentGenerationAPI/Controllers/: DocumentRequestController.cs  WeatherForecastController.cs
DocumentGenerationAPI/DocProcessor/: Checkbox.cs  DocProcessor.csproj  Document.cs  List.cs
DocumentGenerationAPI/DocumentGenerationAPI/: DocumentGenerationAPI.csproj  Program.cs  appsettings.Development.json  appsettings.Production.json  jsonSchema.json
DocumentGenerationAPI/Models/: DocumentRequest.cs  DocumentResponse.cs
DocumentGenerationAPI/Properties/: launchSettings.json
DocumentGenerationAPI/TestRunner/: Program.cs  TestRunner.csproj
GenerationAPI/: JSTemplates.sln
GenerationAPI/DocGen/: DatabaseInterface.cs  DatabaseLib.cs  DocGen.cs  DocGen.csproj  Program.cs
GenerationAPI/src/: DocGen.cs  Helper.cs  Program.cs
JSTG_App/: log4rs.yaml  package-lock.json  package.json
JSTG_App/src-tauri/: Cargo.toml  settings.json  tauri.conf.json
database/: Dockerfile
database/scripts/: init.sql
docProcessor/docProcessor/: Document.cs  docProcessor.csproj
generation/: Dockerfile  generation.sln  parser_syntax.txt
generation/docProcessor/: Document.cs  Image.cs  Parse.cs  Token.cs  TokenType.cs  Utility.cs  docProcessor.csproj
generation/generationapi/: generationapi.csproj
generationapi/: Dockerfile  WeatherForecast.cs  generationapi.csproj  generationapi.http  generationapi.sln
jstg/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
jstg/src/: App.vue  (+3 more)
jstg/src-tauri/: Cargo.toml  tauri.conf.json
jstg/src-tauri/src/: db.rs  document_request.rs  lib.rs  main.rs  storage.rs  util.rs
jstg/src-tauri/src/document_request/: ac.rs  cat.rs  mrb.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml
(+32 files in other folders)
