[package]
name = "jstg"
version = "0.0.0"
description = "A Tauri App"
authors = ["Ben Saunders-Henning"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log4rs = "1.3.0"
log = "0.4.21"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }
thiserror = "1.0.61"
tauri-plugin-shell = "2.0.0-rc.0"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
