[package]
name = "jstg"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ben Saunders-Henning"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jstg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log4rs = "1.3.0"
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }
thiserror = "1.0.64"
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["default", "blocking", "json"] }
bytes = "1.7.2"
